<resources>
    <string name="app_name">PokeBattle</string>
    <string name="splash_fragment_welcome">Welcome Trainer! You have a team of three pokemons and you will fight 3 wild pokemons in a row. But before the battle starts, you only know you first opponent. And remember, most Pokemons have strengths and weaknesses.\nGood luck!</string>
    <string name="splash_fragment_madeby">An application made by:</string>
    <string name="splash_fragment_authors">Thomas Curti\nJérémie Piro\nClément Dedenis\nVincent Masson</string>
    <string name="splash_fragment_battle">BATTLE</string>
    <string name="splash_fragment_pokedex">POKEDEX</string>
    <string name="splash_fragment_madeat">Made at</string>

    <string name="pokedex_fragment_list_item_name">null</string>
    <string name="pokedex_fragment_title">PokeDex</string>
    <string name="pokedex_fragment_error">No data found</string>

    <string name="pokedex_detail_fragment_height">Height:</string>
    <string name="pokedex_detail_fragment_speed">Speed:</string>
    <string name="pokedex_detail_fragment_attack">Attack:</string>
    <string name="pokedex_detail_fragment_special_attack">Special Attack:</string>
    <string name="pokedex_detail_fragment_weight">Weight:</string>
    <string name="pokedex_detail_fragment_hp">HP:</string>
    <string name="pokedex_detail_fragment_defense">Defense</string>
    <string name="pokedex_detail_fragment_special_defense">Special Defense</string>
    <string name="pokedex_detail_fragment_types">Types:</string>

    <string name="lobby_fragment_first_opponent">Your first opponent will be...</string>
    <string name="lobby_fragment_select">Please select your Pokemons for the battle to come.</string>
    <string name="lobby_fragment_first">1</string>
    <string name="lobby_fragment_second">2</string>
    <string name="lobby_fragment_third">3</string>
    <string name="lobby_fragment_question_mark">\?</string>
    <string name="lobby_fragment_fight">Fight !</string>

    <string name="typehelper_double">x2</string>
    <string name="typehelper_half">x0.5</string>
    <string name="typehelper_normal">x0</string>
    <string name="typehelper_from">From</string>
    <string name="typehelper_to">To</string>

</resources>
