<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lobby">

    <Button
        android:id="@+id/lobby_fragment_select_third_btn"
        android:layout_width="45sp"
        android:layout_height="wrap_content"
        android:text="@string/lobby_fragment_third"
        app:layout_constraintBottom_toTopOf="@+id/lobby_fragment_select_third_img"
        app:layout_constraintStart_toStartOf="@+id/lobby_fragment_select_third_img" />

    <View
        android:id="@+id/view2"
        android:layout_width="2dp"
        android:layout_height="175sp"
        android:background="@color/separator_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/lobby_fragment_select_second_btn" />

    <Button
        android:id="@+id/lobby_fragment_select_second_btn"
        android:layout_width="45sp"
        android:layout_height="wrap_content"
        android:text="@string/lobby_fragment_second"
        app:layout_constraintBottom_toTopOf="@+id/lobby_fragment_select_second_img"
        app:layout_constraintStart_toStartOf="@+id/lobby_fragment_select_second_img" />

    <ImageView
        android:id="@+id/lobby_fragment_select_third_img"
        android:layout_width="110sp"
        android:layout_height="110sp"
        android:layout_marginBottom="4dp"
        android:background="@color/background_lobby_select"
        app:layout_constraintBottom_toTopOf="@+id/lobby_fragment_select_third_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <TextView
        android:id="@+id/lobby_fragment_select_third_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/lobby_fragment_question_mark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lobby_fragment_select_third_img"
        app:layout_constraintStart_toStartOf="@+id/lobby_fragment_select_third_img" />

    <ImageView
        android:id="@+id/lobby_fragment_select_second_img"
        android:layout_width="110sp"
        android:layout_height="110sp"
        android:layout_marginBottom="4dp"
        android:background="@color/background_lobby_select"
        app:layout_constraintBottom_toTopOf="@+id/lobby_fragment_select_second_txt"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/lobby_fragment_select_second_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/lobby_fragment_question_mark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lobby_fragment_select_second_img"
        app:layout_constraintStart_toStartOf="@+id/lobby_fragment_select_second_img" />

    <ImageView
        android:id="@+id/lobby_fragment_opponent_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lobby_fragment_first_opponent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lobby_fragment_opponent_first_attribute_img"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/lobby_fragment_opponent_img"
        app:layout_constraintTop_toTopOf="@+id/lobby_fragment_opponent_img" />

    <ImageView
        android:id="@+id/lobby_fragment_opponent_second_attribute_img"
        android:layout_width="45sp"
        android:layout_height="45sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/lobby_fragment_opponent_img"
        app:layout_constraintTop_toBottomOf="@+id/lobby_fragment_opponent_first_attribute_img" />

    <ImageView
        android:id="@+id/lobby_fragment_current_select_first_attribute_img"
        android:layout_width="45sp"
        android:layout_height="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/lobby_fragment_current_select_name_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lobby_fragment_current_select_name_txt" />

    <ImageView
        android:id="@+id/lobby_fragment_current_select_second_attribute_img"
        android:layout_width="45sp"
        android:layout_height="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lobby_fragment_current_select_first_attribute_img"
        app:layout_constraintTop_toTopOf="@+id/lobby_fragment_current_select_first_attribute_img" />

    <TextView
        android:id="@+id/lobby_fragment_opponent_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/lobby_fragment_opponent_img"
        app:layout_constraintStart_toStartOf="@+id/lobby_fragment_opponent_img"
        app:layout_constraintTop_toBottomOf="@+id/lobby_fragment_opponent_img" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lobby_fragment_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobby_fragment_opponent_name_txt" />

    <ImageView
        android:id="@+id/lobby_fragment_select_first_img"
        android:layout_width="110sp"
        android:layout_height="110sp"
        android:layout_marginBottom="4dp"
        android:background="@color/background_lobby_select"
        app:layout_constraintBottom_toTopOf="@+id/lobby_fragment_select_first_txt"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lobby_fragment_select_first_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/lobby_fragment_question_mark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lobby_fragment_select_first_img"
        app:layout_constraintStart_toStartOf="@+id/lobby_fragment_select_first_img" />

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="175sp"
        android:background="@color/separator_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/lobby_fragment_select_first_btn" />

    <Button
        android:id="@+id/lobby_fragment_select_first_btn"
        android:layout_width="45sp"
        android:layout_height="wrap_content"
        android:text="@string/lobby_fragment_first"
        app:layout_constraintBottom_toTopOf="@+id/lobby_fragment_select_first_img"
        app:layout_constraintStart_toStartOf="@+id/lobby_fragment_select_first_img" />

    <TextView
        android:id="@+id/lobby_fragment_current_select_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/lobby_fragment_select_first_btn"
        app:layout_constraintEnd_toStartOf="@+id/lobby_fragment_current_select_first_attribute_img"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lobby_fragment_list"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/lobby_fragment_current_select_first_attribute_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.67" />

    <Button
        android:id="@+id/lobby_fragment_fight_btn"
        android:layout_width="wrap_content"
        android:layout_height="80sp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/lobby_fragment_fight"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lobby_fragment_error_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokedex_fragment_error"
        app:layout_constraintBottom_toBottomOf="@+id/lobby_fragment_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lobby_fragment_list" />
</androidx.constraintlayout.widget.ConstraintLayout>